--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -5,6 +5,8 @@
 .v-input
   display: grid
   flex: 1 1 auto
+  font-size: $input-font-size
+  font-weight: $input-font-weight
 
   &--disabled
     pointer-events: none
