feat: consolidate all position and location props (#15152)
resolves #14952

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -32,6 +32,7 @@
     @include button-density('height', $button-density)
 
   @include tools.border($button-border...)
+  @include tools.position($button-positions)
   @include tools.states('.v-btn__overlay')
   @include tools.variant($button-variants...)
 
