fix(VBottomNavigation): use flex-grow instead of 100% width

--- a/packages/vuetify/src/components/VBottomNavigation/VBottomNavigation.sass
+++ b/packages/vuetify/src/components/VBottomNavigation/VBottomNavigation.sass
@@ -47,7 +47,7 @@
 
   .v-bottom-navigation--grow &
     > .v-btn
-      width: 100%
+      flex-grow: 1
 
   .v-bottom-navigation--shift &
     > .v-btn
