fix(VAvatar): includes -> include

--- a/packages/vuetify/src/components/VAvatar/VAvatar.sass
+++ b/packages/vuetify/src/components/VAvatar/VAvatar.sass
@@ -19,4 +19,4 @@
   @include tools.theme($avatar-theme...)
 
   &--rounded
-    @includes tools.rounded($avatar-rounded-border-radius)
+    @include tools.rounded($avatar-rounded-border-radius)
