feat: rename variants (#15311)

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -79,7 +79,7 @@
       color: rgba(var(--v-theme-on-surface), $button-disabled-opacity)
       opacity: 1
 
-    &.v-btn--variant-contained
+    &.v-btn--variant-elevated
       background: rgb(var(--v-theme-surface))
       box-shadow: none
 
