fix(VToolbar): extend full available width in flex elements

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -5,6 +5,7 @@
 .v-toolbar
   align-items: flex-start
   display: flex
+  flex: $toolbar-flex
   flex-direction: column
   justify-content: space-between
   max-width: 100%
