fix(VBtn): display as inline-grid
fixes #15369

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -8,7 +8,7 @@
 .v-btn
   align-items: center
   border-radius: $button-border-radius
-  display: grid
+  display: inline-grid
   grid-template-areas: "prepend content append"
   grid-template-columns: max-content auto max-content
   font-weight: $button-font-weight
