fix(VExpansionPanel): align title to the start
fixes #15365

--- a/packages/vuetify/src/components/VExpansionPanel/VExpansionPanel.sass
+++ b/packages/vuetify/src/components/VExpansionPanel/VExpansionPanel.sass
@@ -112,6 +112,7 @@
 
 .v-expansion-panel-title
   align-items: center
+  text-align: start
   border-radius: inherit
   display: flex
   font-size: $expansion-panel-title-font-size
