fix(VField): allow input to shrink
fixes #15377

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -98,7 +98,8 @@
   padding-inline-start: var(--v-field-padding-start)
   padding-inline-end: var(--v-field-padding-end)
   padding-top: var(--v-field-padding-top, $field-control-padding-top)
-  width: 100%
+  flex: 1 0 0
+  min-width: 0
 
   input
     letter-spacing: inherit
