fix(VCard): apply disabled opacity to all direct children
is not applied to .v-card__loader

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -23,7 +23,7 @@
     pointer-events: none
     user-select: none
 
-    > [class*='v-card-']
+    >:not(.v-card__loader)
       opacity: $card-disabled-opacity
 
   &--flat
