--- a/packages/vuetify/src/components/VList/_variables.scss
+++ b/packages/vuetify/src/components/VList/_variables.scss
@@ -39,10 +39,12 @@ $list-item-border-width: 0 !default;
 $list-item-border-thin-width: thin !default;
 $list-item-elevation: 1 !default;
 $list-item-min-height: 40px !default;
-$list-item-padding: 8px 16px !default;
+$list-item-padding: 4px 16px !default;
 $list-item-plain-opacity: .62 !default;
 $list-item-rounded-border-radius: map.get(settings.$rounded, null) !default;
 $list-item-transition: .2s settings.$standard-easing !default;
+$list-item-one-line-min-height: 48px !default;
+$list-item-one-line-padding: 8px 16px !default;
 $list-item-two-line-min-height: 64px !default;
 $list-item-two-line-padding: 12px 16px !default;
 $list-item-three-line-min-height: 88px !default;
