fix(VTable): position fixed header above tbody content (#15502)
fixes #15297

--- a/packages/vuetify/src/components/VTable/VTable.sass
+++ b/packages/vuetify/src/components/VTable/VTable.sass
@@ -38,6 +38,7 @@
     thead th
       background: $table-background
       box-shadow: inset 0 -1px 0 $table-border-color
+      z-index: 1
 
   &.v-table--fixed-footer
     tfoot
