fix(VBtn): override v-btn icon size for default icon buttons (#15492)
fixes #15486

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -53,7 +53,11 @@
     border-radius: $button-icon-border-radius
     min-width: 0
     padding: 0
-    font-size: $button-icon-font-size
+
+    // ensure that default
+    // v-icon size is 24px
+    &.v-btn--size-default
+      font-size: $button-icon-font-size
 
     @at-root &
       @include button-density(('width', 'height'), $button-icon-density)
