--- a/packages/vuetify/src/components/VCard/_variables.scss
+++ b/packages/vuetify/src/components/VCard/_variables.scss
@@ -24,6 +24,7 @@ $card-hover-elevation: 8 !default;
 $card-img-flex: 1 1 auto !default;
 $card-item-align-items: center !default;
 $card-item-padding: .625rem 1rem !default;
+$card-overflow-wrap: break-word !default;
 $card-padding: 0 !default;
 $card-plain-opacity: .62 !default;
 $card-positions: absolute fixed !default;
