refactor(VListItem): implement grid, normalize usage w/ v-card-item (#15452)

--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -65,7 +65,7 @@
         padding-inline-start: calc(#{$base-padding} + var(--indent-padding)) !important
 
   &--inset
-    padding-inline-start: $list-subheader-inset-padding-start
+    --indent-padding: #{$list-subheader-inset-padding-start}
 
   .v-list--nav &
     font-size: $list-nav-subheader-font-size
