fix(VFileInput): allow native drag and drop (#15208)

--- a/packages/vuetify/src/components/VFileInput/VFileInput.sass
+++ b/packages/vuetify/src/components/VFileInput/VFileInput.sass
@@ -3,9 +3,9 @@
 // Block
 .v-file-input
   input[type="file"]
+    height: 100%
     left: 0
-    max-width: 0
     opacity: 0
-    pointer-events: none
     position: absolute
-    width: 0
+    top: 0
+    width: 100%
