fix(VListSubheader): use color instead of opacity
allow use of color classes

--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -42,6 +42,7 @@
 
   align-items: center
   background: inherit
+  color: $list-subheader-color
   display: flex
   font-size: $list-subheader-font-size
   font-weight: $list-subheader-font-weight
@@ -51,7 +52,6 @@
   transition: $list-subheader-transition
 
   &__text
-    opacity: $list-subheader-text-opacity
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
