fix(VField): use disabled as placeholder color (#15570)
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -103,6 +103,12 @@
   input
     letter-spacing: inherit
 
+  @at-root
+    & input::placeholder,
+    textarea#{&}::placeholder
+      color: currentColor
+      opacity: var(--v-disabled-opacity)
+
   &:focus,
   &:active
     outline: none
