--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -80,23 +80,19 @@
 
   &--disabled
     pointer-events: none
-
-    // This is multiplied by the text opacity,
-    // so we need to divide it to get the desired value
-    $button-overlay-opacity: math.div($button-disabled-overlay, $button-disabled-opacity)
-
-    &.v-btn--disabled
-      color: rgba(var(--v-theme-on-surface), $button-disabled-opacity)
-      opacity: $button-overlay-opacity
+    opacity: $button-disabled-opacity
 
     &.v-btn--variant-elevated,
     &.v-btn--variant-flat
+      color: rgba(var(--v-theme-on-surface), $button-disabled-opacity)
       background: rgb(var(--v-theme-surface))
       box-shadow: none
       opacity: 1
 
       .v-btn__overlay
-        opacity: $button-overlay-opacity
+        // __overlay uses currentColor, so we need to divide
+        // by the text opacity to get the correct value
+        opacity: math.div($button-disabled-overlay, $button-disabled-opacity)
 
   &--loading
     pointer-events: none
