fix(VInput): reduce vertical height caused by details

--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -45,7 +45,6 @@
   grid-area: messages
   letter-spacing: $input-details-letter-spacing
   line-height: $input-details-line-height
-  margin-bottom: $input-details-margin-bottom
   min-height: $input-details-min-height
   padding-top: $input-details-padding-above
   overflow: hidden
@@ -83,4 +82,5 @@
   grid-area: append
 
 .v-input__control
+  display: flex
   grid-area: control
