fix(VCombobox): make input element full width in firefox
fixes #15317

--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -63,6 +63,7 @@
       position: absolute
       left: 0
       right: 0
+      width: 100%
       padding-inline-start: inherit
       padding-inline-end: inherit
 
