--- a/packages/vuetify/src/components/VCombobox/VCombobox.sass
+++ b/packages/vuetify/src/components/VCombobox/VCombobox.sass
@@ -73,6 +73,7 @@
       position: absolute
       left: 0
       right: 0
+      width: 100%
       padding-inline-start: inherit
       padding-inline-end: inherit
 
