fix(VPagination): disable overlay transition for pagination btns
fixes #15576

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -227,6 +227,8 @@
     @include tools.rounded($button-pagination-border-radius)
 
   &__overlay
+    transition: none
+
     .v-pagination__item--is-active &
       opacity: $button-pagination-active-overlay-opacity
 
