fix(VRadio): change icon color when disabled

--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -100,12 +100,12 @@
 
   &__slot
     align-items: center
-    color: inherit
     display: flex
     margin-bottom: $input-slot-margin-bottom
     min-height: inherit
     position: relative
     transition: $primary-transition
+    transition-property: height, min-height
     width: 100%
 
   &--dense > .v-input__control > .v-input__slot
