fix(VSelect/VCombobox/VAutocomplete): add top margin for chip containers (#15495)
fixes #15482

--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -54,6 +54,8 @@
 
   &--chips
     .v-autocomplete__selection
+      margin-top: $autocomplete-chips-margin-top
+
       &:first-child
         margin-inline-start: 0
 
