--- a/packages/vuetify/src/components/VCombobox/VCombobox.sass
+++ b/packages/vuetify/src/components/VCombobox/VCombobox.sass
@@ -54,6 +54,8 @@
 
   &--chips
     .v-combobox__selection
+      margin-top: $combobox-chips-margin-top
+
       &:first-child
         margin-inline-start: 0
 
