--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -47,5 +47,7 @@
 
   &--chips
     .v-select__selection
+      margin-top: $select-chips-margin-top
+
       &:first-child
         margin-inline-start: 0
