--- a/packages/vuetify/src/components/VSelect/_variables.scss
+++ b/packages/vuetify/src/components/VSelect/_variables.scss
@@ -6,3 +6,4 @@ $select-content-elevation: 4 !default;
 $select-line-height: 1.75 !default;
 $select-transition: .2s settings.$standard-easing !default;
 $select-chips-control-min-height: 64px !default;
+$select-chips-margin-top: 2px !default;
